Use jshepherd for combat profiles